<resources>
	<string name="kp_select_picture">选择照片</string>
	<string name="kp_format_select_picture">选择照片(%1$d/%2$d)</string>
	<string name="kp_all_picture">所有图片</string>
	<string name="kp_preview">预览</string>
	<string name="kp_format_preview">预览(%1$d/%2$d)</string>
	<string name="kp_format_pieces_of_picture">%d张</string>
	<string name="kp_picture_error">图片信息错误,无法加载</string>
	<string name="kp_selected">选择</string>
	<string name="kp_format_selected">选择(%1$d/%2$d)</string>
	<string name="kp_edit">编辑</string>
	<string name="kp_view">查看</string>
	<string name="kp_format_view">查看(%1$d/%2$d)</string>
	<string name="kp_cache_name">编辑</string>
</resources>
