<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#202020"
	tools:context=".picker.KPPicturePreviewActivity">
	
	<android.support.v4.view.ViewPager
		android:id="@id/kpViewPager"
		android:layout_width="match_parent"
		android:layout_height="match_parent"/>
	
	<LinearLayout
		android:id="@id/kpToolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#323232"
		android:gravity="center_vertical">
		
		<ImageView
			android:id="@id/kpBack"
			android:layout_width="@dimen/kpActionBarSize"
			android:layout_height="@dimen/kpActionBarSize"
			android:background="?android:attr/selectableItemBackground"
			android:scaleType="centerInside"
			android:src="@drawable/kp_dark_ic_back"/>
		
		<TextView
			android:id="@id/kpTitle"
			android:layout_width="0dp"
			android:layout_height="@dimen/kpActionBarSize"
			android:layout_weight="1.0"
			android:gravity="center_vertical"
			android:text="@string/kp_select_picture"
			android:textColor="@color/kp_dark_tv_alter"
			android:textSize="16sp"/>
		
		<TextView
			android:id="@+id/kpDone"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="10dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginStart="10dp"
			android:background="@drawable/kp_dark_bg_done"
			android:gravity="center"
			android:padding="6dp"
			android:text="@string/kp_format_selected"
			android:textColor="@android:color/white"
			android:textSize="12sp"/>
	</LinearLayout>
	
	<LinearLayout
		android:id="@id/kpActionbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:background="#323232"
		android:gravity="center_vertical">
		
		<TextView
			android:id="@id/kpEdit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="?android:attr/selectableItemBackground"
			android:padding="12dp"
			android:textColor="@android:color/white"
			android:textSize="14sp"
			tools:text="@string/kp_edit"/>
		
		<View
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1.0"
			android:background="@android:color/transparent"
			android:clickable="true"/>
		
		<TextView
			android:id="@id/kpSelected"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="?android:attr/selectableItemBackground"
			android:drawableLeft="@drawable/kp_dark_ic_picture_check"
			android:drawablePadding="3dp"
			android:drawableStart="@drawable/kp_dark_ic_picture_check"
			android:gravity="center_vertical"
			android:padding="12dp"
			android:text="@string/kp_selected"
			android:textColor="@android:color/white"
			android:textSize="14sp"/>
	</LinearLayout>
</RelativeLayout>